// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OperatingSystemsChart when data is loaded renders a component with data loaded 1`] = `
<DocumentFragment>
  <div>
    <div
      class="chart__title"
    >
      <a
        href="/definitions#dimension_operating_system"
      >
        <span
          class="usa-tooltip"
        >
          <span
            aria-describedby="tooltip-550000"
            class="usa-tooltip__trigger"
            data-position="top"
            tabindex="0"
          >
            Operating Systems
          </span>
          <span
            aria-hidden="true"
            class="usa-tooltip__body"
            id="tooltip-550000"
            role="tooltip"
          >
            The name of the operating system used by the user's device.
          </span>
        </span>
      </a>
    </div>
    <figure
      id="chart_os"
    >
      <div
        class="data chart__bar-chart text--capitalize margin-top-4"
      >
        <div
          class="chart__bar-chart__item"
        >
          <div
            class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
          >
            iOS
          </div>
          <div
            class="chart__bar-chart__item__value"
          >
            36.6%
          </div>
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5"
            style="width: 37%;"
          />
        </div>
        <div
          class="chart__bar-chart__item"
        >
          <div
            class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
          >
            Windows
          </div>
          <div
            class="chart__bar-chart__item__value"
          >
            29.9%
          </div>
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5"
            style="width: 30%;"
          />
          <figure
            class="chart__bar-chart__nested"
            data-scale-to-parent="true"
            id="chart_windows"
          >
            <div
              class="data chart__bar-chart text--capitalize margin-top-4"
            >
              <div
                class="chart__bar-chart__item"
                data-share="22.82190215063274"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  10
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  22.8%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-palette-color-5"
                  style="width: 76%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="5.590931679869998"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  11
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  5.6%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-palette-color-5"
                  style="width: 19%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="0.82591327878594"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  2000
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  0.8%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-palette-color-5"
                  style="width: 3%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="0.31608292810730126"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  8
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  0.3%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-palette-color-5"
                  style="width: 1%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="0.268696410359494"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  7
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  0.3%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-palette-color-5"
                  style="width: 1%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="0.11880742089218736"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  8.1
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  0.1%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-palette-color-5"
                  style="width: 0%;"
                />
              </div>
            </div>
          </figure>
        </div>
        <div
          class="chart__bar-chart__item"
        >
          <div
            class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
          >
            Android
          </div>
          <div
            class="chart__bar-chart__item__value"
          >
            19.3%
          </div>
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5"
            style="width: 19%;"
          />
        </div>
        <div
          class="chart__bar-chart__item"
        >
          <div
            class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
          >
            Macintosh
          </div>
          <div
            class="chart__bar-chart__item__value"
          >
            10%
          </div>
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5"
            style="width: 10%;"
          />
        </div>
        <div
          class="chart__bar-chart__item"
        >
          <div
            class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
          >
            Linux
          </div>
          <div
            class="chart__bar-chart__item__value"
          >
            2.2%
          </div>
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5"
            style="width: 2%;"
          />
        </div>
        <div
          class="chart__bar-chart__item"
        >
          <div
            class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
          >
            Chrome OS
          </div>
          <div
            class="chart__bar-chart__item__value"
          >
            1.9%
          </div>
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5"
            style="width: 2%;"
          />
        </div>
      </div>
    </figure>
  </div>
</DocumentFragment>
`;

exports[`OperatingSystemsChart when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <div>
    <div
      class="chart__title"
    >
      <a
        href="/definitions#dimension_operating_system"
      >
        <span
          class="usa-tooltip"
        >
          <span
            aria-describedby="tooltip-550000"
            class="usa-tooltip__trigger"
            data-position="top"
            tabindex="0"
          >
            Operating Systems
          </span>
          <span
            aria-hidden="true"
            class="usa-tooltip__body"
            id="tooltip-550000"
            role="tooltip"
          >
            The name of the operating system used by the user's device.
          </span>
        </span>
      </a>
    </div>
    <figure
      id="chart_os"
    >
      <div
        class="data chart__bar-chart text--capitalize margin-top-4"
      />
    </figure>
    <figure
      class="hide chart__bar-chart__nested"
      data-scale-to-parent="true"
      id="chart_windows"
    >
      <div
        class="data chart__bar-chart text--capitalize margin-top-4"
      />
    </figure>
  </div>
</DocumentFragment>
`;

exports[`OperatingSystemsChart when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <div>
    <div
      class="chart__title"
    >
      <a
        href="/definitions#dimension_operating_system"
      >
        <span
          class="usa-tooltip"
        >
          <span
            aria-describedby="tooltip-550000"
            class="usa-tooltip__trigger"
            data-position="top"
            tabindex="0"
          >
            Operating Systems
          </span>
          <span
            aria-hidden="true"
            class="usa-tooltip__body"
            id="tooltip-550000"
            role="tooltip"
          >
            The name of the operating system used by the user's device.
          </span>
        </span>
      </a>
    </div>
    <figure
      id="chart_os"
    >
      <div
        class="data chart__bar-chart text--capitalize margin-top-4"
      />
    </figure>
    <figure
      class="hide chart__bar-chart__nested"
      data-scale-to-parent="true"
      id="chart_windows"
    >
      <div
        class="data chart__bar-chart text--capitalize margin-top-4"
      />
    </figure>
  </div>
</DocumentFragment>
`;
